# btweak

./: .gitignore  README.md  pyproject.toml
btweak/: main.py
btweak/data/: docker.yaml
btweak/helpers/: cmdhandler.py  dockerhandler.py  fileparser.py  fixthings.py  toolhandler.py
